@@ -9,7 +9,9 @@
 	    urlcolor=red,
             plainpages=false
 }
+%\def\PageTwoSide{1}
 \clubpenalty=5000
 \widowpenalty=5000
+%\def\TwoSideStartOnRight{1}
 \input lucidabr.tex
 \usepackage[pdftex]{thumbpdf}
