@@ -81,7 +81,6 @@ static int tree_view_selection_count (GtkTreeSelection *select);
 static void check_for_extra_data (void);
 static void set_up_main_menu (void);
 static void startR (gpointer p, guint opt, GtkWidget *w);
-static void Rcleanup (void);
 static void auto_store (void);
 
 GtkWidget *toolbar_box = NULL; /* shared with settings.c */
@@ -920,7 +919,6 @@ int main (int argc, char *argv[])
     free_modelspec();
 
     remove(paths.plotfile);
-    Rcleanup();
 
     gretl_rand_free();
 
@@ -1709,7 +1707,7 @@ void restore_sample (gpointer data, int verbose, GtkWidget *w)
 
 #ifdef G_OS_WIN32
 
-static int create_child_process (char *prog) 
+static int create_child_process (char *prog, char *env) 
 { 
     PROCESS_INFORMATION proc_info; 
     STARTUPINFO start_info; 
@@ -1725,7 +1723,7 @@ static int create_child_process (char *prog)
 			NULL,          /* primary thread security attributes */ 
 			TRUE,          /* handles are inherited  */
 			0,             /* creation flags  */
-			NULL,          /* use parent's environment  */
+			env,           /* NULL = use parent's environment  */
 			NULL,          /* use parent's current directory  */
 			&start_info,   /* STARTUPINFO pointer */ 
 			&proc_info);   /* receives PROCESS_INFORMATION  */
@@ -1786,9 +1784,12 @@ static char *slash_convert (char *str, int which)
 
 static void startR (gpointer p, guint opt, GtkWidget *w)
 {
-    char Rdata[MAXLEN], line[MAXLEN];
+    char Rprofile[MAXLEN], Rdata[MAXLEN], line[MAXLEN];
+    const char *suppress = "--no-init-file";
     FILE *fp;
-#ifndef G_OS_WIN32
+#ifdef G_OS_WIN32
+    char renv[MAXLEN];
+#else
     int i;
     char *s0, *s1, *s2;
     pid_t pid;
@@ -1799,22 +1800,25 @@ static void startR (gpointer p, guint opt, GtkWidget *w)
 	return;
     }
 
-    fp = fopen(".Rprofile", "r");
-    if (fp != NULL) {
-	fclose(fp);
-	if (copyfile(".Rprofile", ".Rprofile.gretltmp")) {
-	    return;
-	}
-    }
-
-    fp = fopen(".Rprofile", "w");
+    build_path(paths.userdir, "gretl.Rprofile", Rprofile, NULL);
+    fp = fopen(Rprofile, "w");
     if (fp == NULL) {
 	errbox(_("Couldn't write R startup file"));
 	return;
     }
 
-    build_path(paths.userdir, "Rdata.tmp", Rdata, NULL);
+#ifdef G_OS_WIN32
+    sprintf(renv, "R_PROFILE=%s", Rprofile);
+    renv[strlen(renv) + 1] = 0;
+#else
+    if (setenv("R_PROFILE", Rprofile, 1)) {
+	errbox(_("Couldn't set R_PROFILE environment variable"));
+	fclose(fp);
+	return;
+    } 
+#endif
 
+    build_path(paths.userdir, "Rdata.tmp", Rdata, NULL);
     sprintf(line, "store \"%s\" -r", Rdata); 
     if (check_cmd(line) || cmd_init(line) ||
 	write_data(Rdata, command.list, Z, datainfo, GRETL_DATA_R, NULL)) {
@@ -1844,7 +1848,8 @@ static void startR (gpointer p, guint opt, GtkWidget *w)
     fclose(fp);
 
 #ifdef G_OS_WIN32
-    create_child_process(Rcommand);
+    sprintf(line, "%s %s", Rcommand, suppress);
+    create_child_process(line, renv);
 #else
     s0 = mymalloc(64);
     s1 = mymalloc(32);
@@ -1868,11 +1873,11 @@ static void startR (gpointer p, guint opt, GtkWidget *w)
 	return;
     } else if (pid == 0) {  
 	if (i == 1)
-	    execlp(s0, s0, NULL);
+	    execlp(s0, s0, suppress, NULL);
 	else if (i == 2)
-	    execlp(s0, s0, s1, NULL);
+	    execlp(s0, s0, s1, suppress, NULL);
 	else if (i == 3)
-	    execlp(s0, s0, s1, s2, NULL);
+	    execlp(s0, s0, s1, s2, suppress, NULL);
 	perror("execlp");
 	_exit(EXIT_FAILURE);
     }
@@ -1884,29 +1889,10 @@ static void startR (gpointer p, guint opt, GtkWidget *w)
 
 /* ........................................................... */
 
-static void Rcleanup (void)
-{
-    FILE *fp;
-    char Rdata[MAXLEN];
-
-    build_path(paths.userdir, "Rdata.tmp", Rdata, NULL);
-    remove(Rdata);
-
-    fp = fopen(".Rprofile.gretltmp", "r");
-    if (fp != NULL) {
-	fclose(fp);
-	if (copyfile(".Rprofile.gretltmp", ".Rprofile") == 0) {
-	    remove(".Rprofile.gretltmp");
-	}
-    }
-}
-
-/* ........................................................... */
-
 static void show_calc (void)
 {
 #ifdef G_OS_WIN32
-    create_child_process(calculator);
+    create_child_process(calculator, NULL);
 #else
     gretl_fork(calculator, NULL);
 #endif 
@@ -1917,7 +1903,7 @@ static void show_calc (void)
 static void show_edit (void)
 {
 #ifdef G_OS_WIN32
-    create_child_process(editor);
+    create_child_process(editor, NULL);
 #else
     gretl_fork(editor, NULL);
 #endif 
